--- a/quarto/precalc/vectors.qmd
+++ b/quarto/precalc/vectors.qmd
@@ -486,11 +486,11 @@ The `sort` function will rearrange the values in `𝒗`:
 sort(𝒗)
 ```
 
-The keyword argument, `rev=false` can be given to get values in decreasing order:
+The keyword argument, `rev=true` can be given to get values in decreasing order:
 
 
 ```{julia}
-sort(𝒗, rev=false)
+sort(𝒗, rev=true)
 ```
 
 For adding a new element to a vector the `push!` method can be used, as in
@@ -722,7 +722,7 @@ For example, here a named tuple is constructed, and then its elements referenced
 
 ```{julia}
 nt = (one=1, two="two", three=:three)  # heterogeneous values (Int, String, Symbol)
-nt.one, nt[2], n[end]                  # named tuples have name or index access
+nt.one, nt[2], nt[end]                  # named tuples have name or index access
 ```
 
 ## Questions
