--- a/quarto/precalc/plotting.qmd
+++ b/quarto/precalc/plotting.qmd
@@ -227,7 +227,7 @@ pts_needed(f, xmin, xmax) = length(unzip(f, xmin, xmax)[1])
 pts_needed(x -> 10x, 0, 10), pts_needed(x -> sin(10x), 0, 10)
 ```
 
-(In fact, the `21` is the minimum number of points used for any function; a linear function only needs two.)
+(In fact, the `31` is the minimum number of points used for any function; a linear function only needs two.)
 
 
 ---
@@ -470,7 +470,7 @@ The `Plots` package provides many arguments for adjusting a graphic, here we men
   * `plot(..., title="main title", xlab="x axis label", ylab="y axis label")`: add title and label information to a graphic
   * `plot(..., color="green")`: this argument can be used to adjust the color of the drawn figure (color can be a string,`"green"`, or a symbol, `:green`, among other specifications)
   * `plot(..., linewidth=5)`: this argument can be used to adjust the width of drawn lines
-  * `plot(..., xlims=(a,b), ylims=(c,d)`: either or both `xlims` and `ylims` can be used to control the viewing window
+  * `plot(..., xlims=(a,b), ylims=(c,d))`: either or both `xlims` and `ylims` can be used to control the viewing window
   * `plot(..., linestyle=:dash)`: will change the line style of the plotted lines to dashed lines. Also `:dot`, ...
   * `plot(..., aspect_ratio=:equal)`: will keep $x$ and $y$ axis on same scale so that squares look square.
   * `plot(..., legend=false)`: by default, different layers will be indicated with a legend, this will turn off this feature
@@ -646,7 +646,7 @@ g(x) = x - sin(x)
 plot(f, g, -pi/2, pi/2)
 ```
 
-This graph is *nearly* a straight line. At the point $(0,0)=(g(0), g(0))$, we see that both functions are behaving in a similar manner, though the slope is not $1$, so they do not increase at exactly the same rate.
+This graph is *nearly* a straight line. At the point $(0,0)=(f(0), g(0))$, we see that both functions are behaving in a similar manner, though the slope is not $1$, so they do not increase at exactly the same rate.
 
 
 ##### Example: Etch A Sketch
@@ -920,7 +920,7 @@ Make this plot for the following specific values of the parameters `R`, `r`, and
 ```{julia}
 #| hold: true
 #| eval: false
-R, r, rho = 1, 3/4, 1/4
+R, r, rho = 1, 1/4, 1/4
 ```
 
 ```{julia}
