Update transformations.qmd some typos

--- a/quarto/precalc/transformations.qmd
+++ b/quarto/precalc/transformations.qmd
@@ -94,7 +94,7 @@ plot!(gf, label="g∘f")
 
 :::{.callout-note}
 ## Note
-Unlike how the basic arithmetic operations are treated, `Julia` defines the infix Unicode operator `\\circ[tab]` to represent composition of functions, mirroring mathematical notation. This infix operations takes in two functions and returns an anonymous function. It can be useful and will mirror standard mathematical usage up to issues with precedence rules.
+Unlike how the basic arithmetic operations are treated, `Julia` defines the infix Unicode operator `\circ[tab]` to represent composition of functions, mirroring mathematical notation. This infix operations takes in two functions and returns an anonymous function. It can be useful and will mirror standard mathematical usage up to issues with precedence rules.
 
 :::
 
@@ -108,7 +108,7 @@ $$
 (f \circ g)(x) = (e^x - x)^2 + 2(e^x - x) - 1.
 $$
 
-If can be helpful to think of the argument to $f$ as a "box" that gets filled in by $g$:
+It can be helpful to think of the argument to $f$ as a "box" that gets filled in by $g$:
 
 
 
@@ -484,7 +484,7 @@ If $h(x) = (f \circ g)(x) = \sin^2(x)$ which is  a possibility for $f$ and $g$:
 #| hold: true
 #| echo: false
 choices = [raw"``f(x)=x^2; \quad g(x) = \sin^2(x)``",
-	       raw"```f(x)=x^2; \quad g(x) = \sin(x)``",
+	       raw"``f(x)=x^2; \quad g(x) = \sin(x)``",
 	       raw"``f(x)=\sin(x); \quad g(x) = x^2``"]
 answ = 2
 radioq(choices, answ)
@@ -519,7 +519,7 @@ Let $h(x) = 4x^2$ and $f(x) = x^2$. Which is **not** true:
 #| echo: false
 choices = [L"The graph of $h(x)$ is the graph of $f(x)$ stretched by a factor of ``4``",
 	   L"The graph of $h(x)$ is the graph of $f(x)$ scaled by a factor of ``2``",
-	   L"The graph of $h(x)$ is the graph of $f(x) shifted up by ``4`` units"]
+	   L"The graph of $h(x)$ is the graph of $f(x)$ shifted up by ``4`` units"]
 answ = 3
 radioq(choices, answ)
 ```
