Update inversefunctions.qmd some typos.

--- a/quarto/precalc/inversefunctions.qmd
+++ b/quarto/precalc/inversefunctions.qmd
@@ -175,7 +175,7 @@ Consider the function $f(x) = (1+x^2)^{-1}$. This bell-shaped function is even (
 y &= \frac{1}{1 + x^2}\\
 1+x^2 &= \frac{1}{y}\\
 x^2 &= \frac{1}{y} - 1\\
-x &= \sqrt{(1-y)/y}, \quad 0 \leq y \leq 1.
+x &= \sqrt{(1-y)/y}, \quad 0 < y \leq 1.
 \end{align*}
 
 
@@ -322,7 +322,7 @@ Is it possible that a function have two different inverses?
 ```{julia}
 #| hold: true
 #| echo: false
-choices = [L"No, for all $x$ in the domain an an inverse, the value of any inverse will be the same, hence all inverse functions would be identical.",
+choices = [L"No, for all $x$ in the domain and an inverse, the value of any inverse will be the same, hence all inverse functions would be identical.",
 L"Yes, the function $f(x) = x^2, x \geq 0$ will have a different inverse than the same function $f(x) = x^2,  x \leq 0$"]
 answ = 1
 radioq(choices, answ)
@@ -337,7 +337,7 @@ A function takes a value $x$ adds $1$, divides by $2$, and then subtracts $1$. I
 ```{julia}
 #| hold: true
 #| echo: false
-choices = [L"Yes, the function is the linear function $f(x)=(x+1)/2 + 1$ and so is monotonic.",
+choices = [L"Yes, the function is the linear function $f(x)=(x+1)/2 - 1$ and so is monotonic.",
 L"No, the function is $1$ then $2$ then $1$, but not \"one-to-one\""
 ]
 answ = 1
@@ -571,8 +571,8 @@ Find the inverse function of $f(x) = (x^3 + 4)/5$.
 #| hold: true
 #| echo: false
 choices = [
-"``f^{-1}(x) = (5y-4)^{1/3}``",
-"``f^{-1}(x) = (5y-4)^3``",
+"``f^{-1}(x) = (5x-4)^{1/3}``",
+"``f^{-1}(x) = (5x-4)^3``",
 "``f^{-1}(x) = 5/(x^3 + 4)``"
 ]
 answ = 1
@@ -686,7 +686,7 @@ The function $f(x) = (ax + b)/(cx + d)$ is known as a [Mobius](http://tinyurl.co
   * and $f_4(x) = x + a/c$ is a translation.
 
 
-For $x=10$, what is $f(10)$?
+For $x=10$, $a=1$, $b=2$, $c=3$ and $d=5$, what is $f(10)$?
 
 
 ```{julia}
@@ -713,7 +713,7 @@ The last two answers should be the same, why?
 #| hold: true
 #| echo: false
 choices = [
-    L"As $f_4(f_3(f_2(f)_1(x))))=(f_4 \circ f_3 \circ f_2 \circ f_1)(x)$",
+    L"As $f_4(f_3(f_2(f_1(x))))=(f_4 \circ f_3 \circ f_2 \circ f_1)(x)$",
     L"As $f_4(f_3(f_2(f_1(x))))=(f_1 \circ f_2 \circ f_3 \circ f_4)(x)$",
     "As the latter is more complicated than the former."
 ]
@@ -721,7 +721,7 @@ answ=1
 radioq(choices, answ)
 ```
 
-Let $g_1$, $g_2$, $g_3$, and $g_4$ denote the inverse functions. Clearly, $g_1(x) = x- d/c$ and $g+4(x) = x - a/c$, as the inverse of adding a constant is subtracting the constant.
+Let $g_1$, $g_2$, $g_3$, and $g_4$ denote the inverse functions. Clearly, $g_1(x) = x- d/c$ and $g_4(x) = x - a/c$, as the inverse of adding a constant is subtracting the constant.
 
 
 What is $g_2(x)=f_2^{-1}(x)$?
