Update polynomial.qmd some typos.

--- a/quarto/precalc/polynomial.qmd
+++ b/quarto/precalc/polynomial.qmd
@@ -126,7 +126,7 @@ Symbolic math programs include well-known ones like the commercial programs Math
 
 The [Symbolics](https://github.com/JuliaSymbolics/Symbolics.jl) package for `Julia` provides a "fast and modern CAS for fast and modern language." It is described further in [Symbolics.jl](../alternatives/symbolics.qmd).
 
-As `SymPy` has some features not yet implemented in `Symbolics`, we use that her. The `PyCall` and `PythonCall` packages are available to glue `Julia` to Python in a seamless manner. These allow the `Julia` package `SymPy` to provide functionality from SymPy within `Julia`.
+As `SymPy` has some features not yet implemented in `Symbolics`, we use that here. The `PyCall` and `PythonCall` packages are available to glue `Julia` to Python in a seamless manner. These allow the `Julia` package `SymPy` to provide functionality from SymPy within `Julia`.
 
 
 :::{.callout-note}
@@ -453,10 +453,10 @@ The following graphic illustrates the $4$ basic *overall* shapes that can result
 ```{julia}
 #| echo: false
 plot(; layout=4)
-plot!(x -> x^4,  -3,3, legend=false, xticks=false, yticks=false, subplot=1, title="n > even, aₙ > 0")
-plot!(x -> x^5,  -3,3, legend=false, xticks=false, yticks=false, subplot=2, title="n > odd, aₙ > 0")
-plot!(x -> -x^4, -3,3, legend=false, xticks=false, yticks=false, subplot=3, title="n > even, aₙ < 0")
-plot!(x -> -x^5, -3,3, legend=false, xticks=false, yticks=false, subplot=4, title="n > odd, aₙ < 0")
+plot!(x -> x^4,  -3,3, legend=false, xticks=false, yticks=false, subplot=1, title="n = even, aₙ > 0")
+plot!(x -> x^5,  -3,3, legend=false, xticks=false, yticks=false, subplot=2, title="n = odd, aₙ > 0")
+plot!(x -> -x^4, -3,3, legend=false, xticks=false, yticks=false, subplot=3, title="n = even, aₙ < 0")
+plot!(x -> -x^5, -3,3, legend=false, xticks=false, yticks=false, subplot=4, title="n = odd, aₙ < 0")
 ```
 
 ##### Example
@@ -539,7 +539,7 @@ But will not factor things that are not hard to see:
 
 
 ```{julia}
-x^2 - 2
+factor(x^2 - 2)
 ```
 
 The factoring $(x-\sqrt{2})\cdot(x + \sqrt{2})$ is not found, as $\sqrt{2}$ is not rational.
