--- a/quarto/references.bib
+++ b/quarto/references.bib
@@ -1,10 +1,13 @@
 ## calculus books
 @misc{Strang,
   author = {Gilbert Strang},
-  title = {{MS Windows NT} Kernel Description},
+  title = {Calculus},
+  published = {1991},
+  publisher = {Wellesley-Cambridge Press},
   url = {https://ocw.mit.edu/courses/res-18-001-calculus-online-textbook-spring-2005/},
   note = {Published in 1991 by Wellesley-Cambridge Press, the book is a useful resource for educators and self-learners alike.}
 }
+
 
 @misc{Knill,
   author = {Oliver Knill},
@@ -41,13 +44,7 @@
   year = 	 {2019}
 }
 
-@misc{SAMPLE_WEBPAGE,
-  author = {},
-  title = {{MS Windows NT} Kernel Description},
-  url = {},
-  doi = {},
-  note = {}
-}
+
 
 @article{knuth84,
   author = {Knuth, Donald E.},
