Update exp_log_functions.qmd some typos.

--- a/quarto/precalc/exp_log_functions.qmd
+++ b/quarto/precalc/exp_log_functions.qmd
@@ -230,7 +230,7 @@ plot!(x -> P₀ * exp(r * (x - x₀)), 1950, 1990, linewidth=5, alpha=0.25)
 plot!(x -> 𝑷₀ * exp(𝒓 * (x - 𝒙₀)), 1960, 2020, linewidth=5, alpha=0.25)
 ```
 
-(The `unzip` function is from the `CalculusWithJulia` package and will be explained in a subsequent section.) We can see that the projections from the year $1970$ hold up fairly well
+(The `unzip` function is from the `CalculusWithJulia` package and will be explained in a subsequent section.) We can see that the projections from the year $1970$ hold up fairly well.
 
 
 On this plot we added two *exponential* models. at $1960$ we added a *roughly* $0.2$ percent per year growth (a rate mentioned in an accompanying caption) and at $2000$ a roughly $0.5$ percent per year growth. The former barely keeping up with the data.
@@ -486,7 +486,7 @@ If $x$, $y$, and $z$ satisfy $2^x = 3^y$ and $4^y = 5^z$, what is the ratio $x/z
 #| hold: true
 #| echo: false
 choices = [
-raw"``\frac{\log(2)\log(3)}{\log(5)\log(4)}``",
+raw"``\frac{\log(3)\log(5)}{\log(2)\log(4)}``",
 raw"``2/5``",
 raw"``\frac{\log(5)\log(4)}{\log(3)\log(2)}``"
 ]
@@ -510,14 +510,14 @@ yesnoq(answ)
 ###### Question
 
 
-The [Richter](https://en.wikipedia.org/wiki/Richter_magnitude_scale) magnitude is determined from the logarithm of the amplitude of waves recorded by seismographs (Wikipedia). The formula is $M=\log(A) - \log(A_0)$ where $A_0$ depends on the epicenter distance. Suppose an event has $A=100$ and $A_0=1/100$. What is $M$?
+The [Richter](https://en.wikipedia.org/wiki/Richter_magnitude_scale) magnitude is determined from the logarithm of the amplitude of waves recorded by seismographs (Wikipedia). The formula is $M=\log_{10}(A) - \log_{10}(A_0)$ where $A_0$ depends on the epicenter distance. Suppose an event has $A=100$ and $A_0=1/100$. What is $M$?
 
 
 ```{julia}
 #| hold: true
 #| echo: false
 A, A0 = 100, 1/100
-val = M = log(A) - log(A0)
+val = M = log10(A) - log10(A0)
 numericq(val)
 ```
 
@@ -596,8 +596,8 @@ What statement appears to be true?
 #| hold: true
 #| echo: false
 choices = [
-raw"``\log(1-x) \geq -x - x^2/2``",
-raw"``\log(1-x) \leq -x - x^2/2``"
+raw"``\log(1-x) \geq -x - x^2/2, \text{ when }x \leq 0``",
+raw"``\log(1-x) \leq -x - x^2/2, \text{ when }x \leq 0``"
 ]
 answ = 1
 radioq(choices, answ)
