--- a/quarto/alternatives/plotly_plotting.qmd
+++ b/quarto/alternatives/plotly_plotting.qmd
@@ -734,7 +734,9 @@ For parametrically defined surfaces, the $x$ and $y$ values also correspond to m
 ```{julia}
 #| hold: true
 r, R = 1, 5
-X(theta,phi) = [(r*cos(theta)+R)*cos(phi), (r*cos(theta)+R)*sin(phi), r*sin(theta)]
+X(theta,phi) = [(r*cos(theta)+R)*cos(phi),
+                (r*cos(theta)+R)*sin(phi),
+                r*sin(theta)]
 
 us = range(0, 2pi, length=25)
 vs = range(0, pi, length=25)
