Update limits_extensions.qmd some typos.

--- a/quarto/limits/limits_extensions.qmd
+++ b/quarto/limits/limits_extensions.qmd
@@ -69,7 +69,7 @@ plot!(abs)
 plot!(x -> -abs(x))
 ```
 
-The [squeeze](http://en.wikipedia.org/wiki/Squeeze_theorem) theorem of calculus is the formal reason $f$ has a limit at $0$, as as both the upper function, $|x|$, and the lower function, $-|x|$, have a limit of $0$ at $0$.
+The [squeeze](http://en.wikipedia.org/wiki/Squeeze_theorem) theorem of calculus is the formal reason $f$ has a limit at $0$, as both the upper function, $|x|$, and the lower function, $-|x|$, have a limit of $0$ at $0$.
 
 
 ## Right and left limits
@@ -132,7 +132,7 @@ That means the mathematical limit need not exist when `SymPy`'s `limit` returns 
 
 :::
 
-The relation between the two concepts is that a function has a limit at $c$ if an only if the left and right limits exist and are equal. This function $f$ has both existing, but the two limits are not equal.
+The relation between the two concepts is that a function has a limit at $c$ if and only if the left and right limits exist and are equal. This function $f$ has both existing, but the two limits are not equal.
 
 
 There are other such functions that jump. Another useful one is the floor function, which just rounds down to the nearest integer. A graph shows the basic shape:
@@ -353,7 +353,7 @@ limit(g(x), x=>0, dir="+")
 ## Limits of sequences
 
 
-After all this, we still can't formalize the basic question asked in the introduction to limits: what is the area contained in a parabola. For that we developed a sequence of sums: $s_n = 1/2 \dot((1/4)^0 + (1/4)^1 + (1/4)^2 + \cdots + (1/4)^n)$. This isn't a function of $x$, but rather depends only on non-negative integer values of $n$. However, the same idea as a limit at infinity can be used to define a limit.
+After all this, we still can't formalize the basic question asked in the introduction to limits: what is the area contained in a parabola. For that we developed a sequence of sums: $s_n = 1/2 \cdot((1/4)^0 + (1/4)^1 + (1/4)^2 + \cdots + (1/4)^n)$. This isn't a function of $x$, but rather depends only on non-negative integer values of $n$. However, the same idea as a limit at infinity can be used to define a limit.
 
 
 > Let $a_0,a_1, a_2, \dots, a_n, \dots$ be a sequence of values indexed by $n$. We have $\lim_{n \rightarrow \infty} a_n = L$ if for every $\epsilon > 0$ there exists an $M>0$ where if $n > M$ then $|a_n - L| < \epsilon$.
@@ -441,7 +441,7 @@ The limit discussion first defined limits of scalar univariate functions at a po
 
   * Convergent sequences are bounded.
   * All *bounded* monotone sequences converge.
-  * Every bounded sequence has a convergent subsequence. (Bolzano-Weirstrass)
+  * Every bounded sequence has a convergent subsequence. (Bolzano-Weierstrass)
   * The limit of $f$ at $c$ exists and equals $L$ if and only if for *every* sequence $x_n$ in the domain of $f$ converging to $c$ the sequence $s_n = f(x_n)$ converges to $L$.
 
 
@@ -553,7 +553,7 @@ limit(x^m / exp(x), x => oo)
 That is $e^x$ grows faster than any power of $x$.
 
 
-Now, if $a, b > 1$ then $f(x) = a^x$ and $g(x) = b^x$ will be comparable. Take $m$ so that $a^m > b$ and $n$ so that $b^n > x$ as then, say,
+Now, if $a, b > 1$ then $f(x) = a^x$ and $g(x) = b^x$ will be comparable. Take $m$ so that $a^m > b$ and $n$ so that $b^n > a$ as then, say,
 
 
 $$
@@ -880,7 +880,9 @@ limit(sin(sin(x^2))/x^k, x=>0)
 For which value(s) of $k$ in $1,2,3$ is this actually the correct answer? (Do the above $3$ times using a specific value of `k`, not a numeric one.
 
 
-```{julia, echo=false}
+```{julia}
+#| hold: true
+#| echo: false
 choices = ["``1``", "``2``", "``3``", "``1,2``", "``1,3``", "``2,3``", "``1,2,3``"]
 radioq(choices, 1, keep_order=true)
 ```
@@ -937,7 +939,6 @@ In `julia`, $\log_k(x)$ is found with `log(k,x)`. The default, `log(x)` takes $k
 
 
 ```{julia}
-#| echo: false
 k = 10				# say. Replace with actual value
 h(x) = x^(1/log(k, x))
 ```
