Update intermediate_value_theorem.qmd and continuity.qmd some typos.

--- a/quarto/limits/continuity.qmd
+++ b/quarto/limits/continuity.qmd
@@ -472,7 +472,7 @@ val = sin(2pi * cos(2pi * 1/4))
 numericq(val)
 ```
 
-What is $\lim{x \rightarrow 0.25} g(f(x))$?
+What is $\lim_{x \rightarrow 0.25} g(f(x))$?
 
 
 ```{julia}
